; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/time/extr_timekeeping.c_getboottime.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/time/extr_timekeeping.c_getboottime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__, %struct.TYPE_4__ }
%struct.TYPE_5__ = type { i64, i64 }
%struct.TYPE_4__ = type { i64, i64 }
%struct.timespec = type { i64, i64 }

@timekeeper = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @getboottime(%struct.timespec* %0) #0 {
  %2 = alloca %struct.timespec*, align 8
  %3 = alloca %struct.timespec, align 8
  store %struct.timespec* %0, %struct.timespec** %2, align 8
  %4 = getelementptr inbounds %struct.timespec, %struct.timespec* %3, i32 0, i32 0
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @timekeeper, i32 0, i32 1, i32 0), align 8
  %6 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @timekeeper, i32 0, i32 0, i32 0), align 8
  %7 = add nsw i64 %5, %6
  store i64 %7, i64* %4, align 8
  %8 = getelementptr inbounds %struct.timespec, %struct.timespec* %3, i32 0, i32 1
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @timekeeper, i32 0, i32 1, i32 1), align 8
  %10 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @timekeeper, i32 0, i32 0, i32 1), align 8
  %11 = add nsw i64 %9, %10
  store i64 %11, i64* %8, align 8
  %12 = load %struct.timespec*, %struct.timespec** %2, align 8
  %13 = getelementptr inbounds %struct.timespec, %struct.timespec* %3, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = sub nsw i64 0, %14
  %16 = getelementptr inbounds %struct.timespec, %struct.timespec* %3, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = sub nsw i64 0, %17
  %19 = call i32 @set_normalized_timespec(%struct.timespec* %12, i64 %15, i64 %18)
  ret void
}

declare dso_local i32 @set_normalized_timespec(%struct.timespec*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
